[gd_scene load_steps=17 format=3 uid="uid://ccqb7tkhgt2qw"]

[ext_resource type="Script" path="res://Scenes/Enemy/boss.gd" id="1_lbkg4"]
[ext_resource type="Texture2D" uid="uid://dq7gkgpuw3v7e" path="res://Graphics/LD56Player.png" id="1_xb5k4"]
[ext_resource type="PackedScene" uid="uid://b1ovmjy0yetjh" path="res://Scenes/Utility/hurt_box.tscn" id="2_115sk"]
[ext_resource type="Shader" path="res://Scenes/Utility/enemy.gdshader" id="2_wg005"]
[ext_resource type="Script" path="res://Scenes/Utility/hit_box.gd" id="3_id68q"]
[ext_resource type="AudioStream" uid="uid://bwjwmk1dws1uf" path="res://Sound/enemyhit.wav" id="5_8ksfa"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_plpvt"]
resource_local_to_scene = true
shader = ExtResource("2_wg005")
shader_parameter/start_frame = 0
shader_parameter/current_frame = 0
shader_parameter/mix_ratio = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2ry3r"]
radius = 23.0217

[sub_resource type="CircleShape2D" id="CircleShape2D_5iybu"]
radius = 27.0185

[sub_resource type="CircleShape2D" id="CircleShape2D_5ig7u"]
radius = 30.0167

[sub_resource type="Animation" id="Animation_ihcd4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_lpv5y"]
resource_name = "fade in"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0), Color(1, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e8lm0"]
_data = {
"RESET": SubResource("Animation_ihcd4"),
"fade in": SubResource("Animation_lpv5y")
}

[sub_resource type="Animation" id="Animation_24weu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_i42dx"]
resource_name = "walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(2.05, 2.05), Vector2(2, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kr4wf"]
_data = {
"RESET": SubResource("Animation_24weu"),
"walk": SubResource("Animation_i42dx")
}

[node name="Boss" type="CharacterBody2D" groups=["CircleEnemy"]]
script = ExtResource("1_lbkg4")
knockback_recovery = 25.0

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
material = SubResource("ShaderMaterial_plpvt")
scale = Vector2(2, 2)
texture = ExtResource("1_xb5k4")
hframes = 3
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2ry3r")

[node name="HurtBox" parent="." instance=ExtResource("2_115sk")]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource("CircleShape2D_5iybu")

[node name="HitBox" type="Area2D" parent="." groups=["attack"]]
collision_layer = 2
collision_mask = 2
monitoring = false
script = ExtResource("3_id68q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_5ig7u")

[node name="DisableHitBoxTimer" type="Timer" parent="HitBox"]
wait_time = 0.5
one_shot = true

[node name="shaderTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="attacktimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationPlayer")
libraries = {
"": SubResource("AnimationLibrary_e8lm0")
}
autoplay = "fade in"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kr4wf")
}
autoplay = "walk"

[node name="dashTimercd" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0

[node name="Timer" type="Timer" parent="dashTimercd"]
unique_name_in_owner = true
wait_time = 1.2
one_shot = true

[node name="CircleTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 12.0
one_shot = true

[node name="circlespawn" type="Node2D" parent="."]

[node name="snd_hit" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_8ksfa")
volume_db = -3.0
max_distance = 800.0
attenuation = 0.378929

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="HitBox/DisableHitBoxTimer" to="HitBox" method="_on_disable_hit_box_timer_timeout"]
[connection signal="timeout" from="shaderTimer" to="." method="_on_shader_timer_timeout"]
[connection signal="timeout" from="attacktimer" to="." method="_on_attacktimer_timeout"]
[connection signal="timeout" from="dashTimercd" to="." method="_on_dash_timercd_timeout"]
[connection signal="timeout" from="dashTimercd/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="CircleTimer" to="." method="_on_circle_timer_timeout"]

[editable path="HurtBox"]
